<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">794938350563937</string>
    <string name="facebook_login_failed">Facebook login failed</string>
    <string name="facebook_login_error">Facebook login error</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="LoginAsGuest">Use app as a guest</string>
    <string name="service_name">MusicMap Web Service</string>
    <string name="title_activity_set_pref_location">Set preferences</string>
	
    <string name="app_text_logo">MusicMap Logo</string>
    <string name="no_connection_error">No Internet connection</string>
    <string name="check_connection_btn">Check connection</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="set_location">Set your location:</string>
    <string name="no_location_error">Choose a location</string>
    <string name="set_genres">Set genres you like:</string>
    <string name="mm_service_login_error">Web service login error</string>
    <string name="gmap_unable_to_create_error">Unable to create map</string>
    <string name="unknown_error">Unknown error</string>
    
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="dbUpdate_title">Updating</string>
    <string name="dbUpdate_text">New events matching your preferences!</string>
    
    <string name="eventMainImageDesc">Main Image</string>
    <string name="eventNameDef">Event name</string>
    <string name="eventLocationDef">Unknown location</string>
    <string name="eventPriceDef">Unknown</string>
    <string name="eventTimeDef">Unknown</string>
    <string name="eventDescDef">No information about this event.</string>
    <string name="eventDescTitle">Event details</string>
    <string name="eventRandIcon">Event Icon</string>
    <string name="eventShareIcon">Share Icon</string>
    
    <string name="yt_player_error">Failed to load youtube player.</string>
    <string name="yt_player_no_app_error">Please install youtube app.</string>
    <string name="no_bio_info">"No biography for selected artist/group."</string>
    <string name="open_navigation">Chose location</string>
    <string name="close_navigation">Close</string>
    <string name="no_preferred_locations">Preferred locations have not been selected yet.</string>
    <string name="action_setPreferences">Locations</string>
    <string name="searchEvent">Event name</string>
    <string name="searchGenre">Genre</string>
    <string name="searchMusician">Musician</string>
    <string name="searchDateSince">Date since</string>
    <string name="searchDateUntil">Date until</string>
    <string name="searchCity">City</string>
    
</resources>
