<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2" >
  
    <RelativeLayout 
    	android:id="@+id/eventData"
       	android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:background="#f2f2f2">
   		
   		<RelativeLayout 
   		    android:id="@+id/eventMainHeader"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content" >
	   		
	   		<ImageView
	   		    android:id="@+id/eventMainImage"
	   		    android:layout_width="match_parent"
	   		    android:layout_height="wrap_content"
	   		    android:contentDescription="@string/eventMainImageDesc"
	   		    android:src="@drawable/event_def" 
	   		    android:cropToPadding="true"
	   		    android:scaleType="centerCrop" />
			<TextView
			    android:id="@+id/eventName"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"
			    android:layout_centerHorizontal="true"
			    android:gravity="bottom"
			    android:layout_marginBottom="6dp"
			    android:text="@string/eventNameDef"
			    android:textColor="#fff"
			    android:textSize="24sp"
			    android:textStyle="bold" 
			    android:textAlignment="center"
			    android:shadowColor="#777"
			    android:shadowDx="1"
			    android:shadowDy="1"
			    android:shadowRadius="1"/>
			
			<ImageView
			    android:id="@+id/shareEvent"
			    android:layout_width="40dp"
			    android:layout_height="40dp"
			    android:layout_alignParentTop="true"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentStart="true"
			    android:layout_marginLeft="4dp"
			    android:layout_marginStart="4dp"
			    android:layout_marginTop="4dp"
			    android:src="@drawable/ic_action_share"/>

		</RelativeLayout>
		
		<RelativeLayout 
   		    android:id="@+id/eventSubHeader"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_below="@id/eventMainHeader"
   		    android:paddingLeft="5dp"
   		    android:paddingRight="5dp"
   		    android:paddingTop="10dp"
   		    android:paddingBottom="8dp"
   		    android:layout_marginBottom="8dp"
   		    android:background="#fff">
				
		    
			<ImageView
			    android:id="@+id/eventLocationIcon"
			    android:layout_width="16dp"
			    android:layout_height="16dp"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentStart="true"
			    android:contentDescription="@string/eventRandIcon"
			    android:cropToPadding="true"
			    android:src="@drawable/location" />
				
			<TextView
			    android:id="@+id/eventLocation"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:text="@string/eventLocationDef"			   
			    android:layout_toRightOf="@id/eventLocationIcon"
			    android:layout_toEndOf="@id/eventLocationIcon"/>
			
				
			<TextView
			    android:id="@+id/eventPrice"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"		    
			   	android:layout_centerHorizontal="true"
			    android:text="@string/eventPriceDef" 		    
			    android:layout_marginLeft="4dp"
			    android:layout_marginStart="4dp"/>
				
			<ImageView
			    android:id="@+id/eventPriceIcon"
			    android:layout_width="16dp"
			    android:layout_height="16dp"
			    android:layout_toLeftOf="@id/eventPrice"
			    android:layout_toStartOf="@id/eventPrice"
			    android:contentDescription="@string/eventRandIcon"
			    android:cropToPadding="true"
			    android:src="@drawable/price" />
		
			
				
			<TextView
			    android:id="@+id/eventTime"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"			   
			    android:text="@string/eventTimeDef" 		  		    
			    android:layout_marginLeft="4dp"
			    android:layout_marginStart="4dp" 
			    android:layout_alignParentRight="true"
			    android:layout_alignParentEnd="true"/>
				
			<ImageView
			    android:id="@+id/eventTimeIcon"
			    android:layout_width="16dp"
			    android:layout_height="16dp"			    
			    android:layout_toLeftOf="@id/eventTime"
			    android:layout_toStartOf="@id/eventTime"		    
			    android:contentDescription="@string/eventRandIcon"
			    android:cropToPadding="true"
			    android:src="@drawable/time" />
		
		</RelativeLayout>
		
		<LinearLayout 
   		    android:id="@+id/eventBody"
   		    android:layout_width="match_parent"
   		
   		    android:layout_height="500dp"
   		    android:layout_below="@id/eventSubHeader"
   		    android:orientation="horizontal"
   		    android:layout_marginLeft="4dp"
   		    android:layout_marginRight="4dp"
   		    >
		
		    <ExpandableListView 
		        android:id="@+id/eventDetailsList"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="#f2f2f2"
		        android:childDivider="#00000000"
		        android:indicatorRight="0dp"        
		        android:scrollbars="none">
		    </ExpandableListView>
		        
		   
		</LinearLayout>
		<LinearLayout 
		    android:id="@+id/ytPlayerContainer"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="#faaaaf"
		    android:orientation="vertical"
		    android:layout_below="@id/eventBody">
			<!-- 
		     <fragment
		      android:name="com.google.android.youtube.player.YouTubePlayerFragment"
		      android:id="@+id/youtubePlayerFragment"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"/>
		    -->
		</LinearLayout>

	</RelativeLayout>

</ScrollView>
